src/test/deca/context/valid/custom/if/if_float_true.deca
// Description:
//   Declaration of a float and test its value with an if condition.
// Results:
//    Line 11: display "Ok" on the standard output because the condition is true.
//
// History:
//    created on 12/01/2022

{
   float i = 1.1;
   if (i == 1.1) {
        println("Ok");
   } else {
        println("Error because i == 1.1 is true");
   }
}
