src/test/deca/context/invalid/custom/if_bool_condition.deca
// Description:
//   Declaration of a boolean and test its value with an if condition.
// Results:
//    Line 11: display "Ok" on the standard output because the condition is true.
//
// History:
//    created on 12/01/2022

{
   boolean b = true;
   if (b == true) {
        println("Ok");
   } else {
        println("Error because b is true");
   }
}
